syntax = "proto3";

package protobuf;


// protoc --proto_path=./protos --go_out=plugins=grpc:./protos ./protos/*.proto


service Greeter {
	// Sends a greeting
	rpc SayHello (HelloRequest) returns (HelloReply) {}
  }
  
  // The request message containing the user's name.
  message HelloRequest {
	string name = 1;
  }
  
  // The response message containing the greetings
  message HelloReply {
	string message = 1;
  }